--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ html {
 img {vertical-align: middle;}
 
 
+
 .info{
+  float:right;
 	position:fixed;
 	top:8px;
 	right:5px;
@@ -23,16 +25,24 @@ img {vertical-align: middle;}
   /* font-family: arial; */
   /* letter-spacing:0.2px; */
   /* font-family: sans-serif; */
-
 }
+}
+
+/* @media screen and (min-width: 1100px) { */
 
 p{
  font-family: Helvetica Neue;
  /* font-family: arial; */
  position:relative;
  top:10px;
- width: 1100px;
+ max-width: 1100px;
  line-height:110%;
+}
+
+.text{
+  max-width: 1100px;
+  padding-top:8px;
+  padding-bottom: 8px;;
 }
 
 /* Slideshow container */
