--- a/style.css
+++ b/style.css
@@ -39,10 +39,13 @@ p{
  line-height:110%;
 }
 
+
+@media screen and (min-width: 1100px) {
 .text{
   max-width: 1100px;
   padding-top:8px;
-  padding-bottom: 8px;;
+  padding-bottom: 11px;;
+}
 }
 
 /* Slideshow container */
