--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ img {vertical-align: middle;}
 	top:8px;
 	right:5px;
 	/* width:600px; */
-  width:560px;
+  /* width:560px; */
+  max-width:560px;
+  width:100%;
 	border-color: pink;
 	line-height:110%;
   font-family: Helvetica Neue;
@@ -48,6 +50,8 @@ p{
 }
 }
 
+
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1080px;
@@ -57,6 +61,7 @@ p{
   left:0px;
 
 }
+
 
 
 .mySlides4{
