--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   margin:0;
   /* padding:0; */
   font-family: Helvetica Neue;
+  /* background-color: #F2F2F2; */
 
 }
 
@@ -39,6 +40,7 @@ p{
  top:10px;
  max-width: 1100px;
  line-height:110%;
+ display:inline-block;
 }
 
 
@@ -46,7 +48,10 @@ p{
 .text{
   max-width: 1100px;
   padding-top:8px;
-  padding-bottom: 7px;;
+  padding-bottom: 7px;
+  padding-left: 0;
+  padding-right: 0;
+  display:inline-block;
 }
 }
 
@@ -217,6 +222,37 @@ p{
   right:300px;
 }
 
+.b-13{
+  /* visibility: hidden; */
+  font-size: 600px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-13 .next{
+  right:100px;
+}
+
+.b-14{
+  /* visibility: hidden; */
+  font-size: 700px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-14 .next{
+  right:400px;
+}
+
+
+
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -289,6 +325,615 @@ a:visited:hover{
   left:10px;
   bottom:10px;
 }
+
+
+/* hover-img */
+
+.hover-a{
+  margin:0;
+  padding:0;
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+}
+
+.aa{
+  display:inline-block;
+  opacity: 0;
+  position:fixed;
+  z-index: 999;
+  width: 40%;
+  position: fixed;
+	top:85%;
+	left:78%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-a:hover .aa{
+  /* display:block; */
+  opacity:1;
+}
+
+
+.hover-b{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.bb{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 30%;
+  position: fixed;
+	top:40%;
+	left:80%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-b:hover .bb{
+  display:block;
+}
+
+
+.hover-c{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.cc{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 10%;
+  position: fixed;
+	top:60%;
+	left:60%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-c:hover .cc{
+  display:block;
+}
+
+
+
+.hover-d{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.dd{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 30%;
+  position: fixed;
+	top:40%;
+	left:80%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-d:hover .dd{
+  display:block;
+}
+
+
+.hover-e{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.ee{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 40%;
+  position: fixed;
+	top:34%;
+	left:55%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-e:hover .ee{
+  display:block;
+}
+
+
+.hover-f{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.ff{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 85%;
+  position: fixed;
+	top:50%;
+	left:70%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-f:hover .ff{
+  display:block;
+}
+
+
+.hover-g{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.gg{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width: 34%;
+  position: fixed;
+	top:48%;
+	left:70%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-g:hover .gg{
+  display:block;
+}
+
+
+.hover-j{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.jj{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:5%;
+  position: fixed;
+	top:48%;
+	left:70%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-j:hover .jj{
+  display:block;
+}
+
+
+
+
+.hover-k{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.kk{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:10%;
+  position: fixed;
+	top:18%;
+	left:95%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-k:hover .kk{
+  display:block;
+}
+
+
+.hover-l{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.ll{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:30%;
+  position: fixed;
+	top:29%;
+	left:70%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-l:hover .ll{
+  display:block;
+}
+
+.hover-m{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.mm{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:32%;
+  position: fixed;
+	top:43%;
+	left:80%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-m:hover .mm{
+  display:block;
+}
+
+.hover-n{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.nn{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:30%;
+  position: fixed;
+	top:50%;
+	left:60%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-n:hover .nn{
+  display:block;
+}
+
+
+.hover-o{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.oo{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:30%;
+  position: fixed;
+	top:51%;
+	left:65%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-o:hover .oo{
+  display:block;
+}
+
+
+.hover-p{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.pp{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:15%;
+  position: fixed;
+	top:20%;
+	left:49%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-p:hover .pp{
+  display:block;
+}
+
+
+
+.hover-q{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.qq{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:35%;
+  position: fixed;
+	top:50%;
+	left:65%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-q:hover .qq{
+  display:block;
+}
+
+
+.hover-r{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.rr{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:35%;
+  position: fixed;
+	top:50%;
+	left:65%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-r:hover .rr{
+  display:block;
+}
+
+.hover-s{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.ss{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:35%;
+  position: fixed;
+	top:45%;
+	left:83%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-s:hover .ss{
+  display:block;
+}
+
+.hover-u{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.uu{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:35%;
+  position: fixed;
+	top:45%;
+	left:83%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-u:hover .uu{
+  display:block;
+}
+
+
+.hover-v{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.vv{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:28%;
+  position: fixed;
+	top:42%;
+	left:50%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-v:hover .vv{
+  display:block;
+}
+
+
+.hover-w{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.ww{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:70%;
+  position: fixed;
+	top:40%;
+	left:59%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-w:hover .ww{
+  display:block;
+}
+
+.hover-x{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.xx{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:41%;
+  position: fixed;
+	top:49%;
+	left:73%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-x:hover .xx{
+  display:block;
+}
+
+.hover-y{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.yy{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:30%;
+  position: fixed;
+	top:70%;
+	left:80%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-y:hover .yy{
+  display:block;
+}
+
+.hover-z{
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.zz{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:25%;
+  position: fixed;
+	top:25%;
+	left:54%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-z:hover .zz{
+  display:block;
+}
+
+.hover-play{
+  font-size: 12px;
+color:blue;
+position: relative;
+display:inline-block;
+cursor:zoom-in;
+margin:0;
+padding:0;
+}
+
+.play{
+  display: none;
+  position:fixed;
+  z-index: 999;
+  width:17%;
+  position: fixed;
+	top:20%;
+	left:92%;
+	transform:translate(-50%, -50%);
+}
+
+.hover-play:hover .play{
+  display:block;
+}
+
+
+
+
+
+
+
+
 
 
 
