--- a/style.css
+++ b/style.css
@@ -251,6 +251,21 @@ p{
 }
 
 
+.b-15{
+  /* visibility: hidden; */
+  font-size: 500px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-15 .next{
+  right:100px;
+}
+
+
 
 
 /* Next & previous buttons */
