--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p{
 
 
 .b-2{
-  font-size: 480px;
+  font-size: 430px;
   opacity: 0;
   cursor: pointer;
   /* bottom:1000px; */
@@ -229,7 +229,7 @@ p{
 
 .b-12 .next{
   right:300px;
-  left:10px;
+  /* left:10px; */
 }
 
 .b-13{
@@ -244,7 +244,7 @@ p{
 
 .b-13 .next{
   right:100px;
-  left:10px;
+  /* left:10px; */
 }
 
 .b-14{
@@ -285,7 +285,8 @@ p{
   cursor: pointer;
   /* cursor: url('http://www.rw-designer.com/cursor-extern.php?id=88738'),default; */
   position:absolute;
-  top: -30px;
+  top: -10px;
+  /* bottom:10px;; */
   color: red;
   /* font-size: 700px; */
   transition: 0.6s ease;
