--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ html {
 .mySlides1, .mySlides2 {display: none}
 img {vertical-align: middle;}
 
-
+.top{
+  position:fixed;
+  top:0;
+  right:1%;
+  text-indent: -1em;
+}
 
 .info{
   float:right;
@@ -288,9 +293,71 @@ p{
   /* bottom:10px; */
 }
 
+
+
 .b-16 .next{
   right:100px;
   left:10px;
+}
+
+.b-17 .next{
+  right:100px;
+  left:10px;
+}
+
+.b-17{
+  /* visibility: hidden; */
+  font-size: 800px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-18 .next{
+  right:100px;
+  left:10px;
+}
+
+.b-18{
+  /* visibility: hidden; */
+  font-size: 600px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-19 .next{
+  right:100px;
+  left:10px;
+}
+
+.b-19{
+  /* visibility: hidden; */
+  font-size: 700px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
+}
+
+.b-20 .next{
+  right:100px;
+  left:10px;
+}
+
+.b-20{
+  /* visibility: hidden; */
+  font-size: 600px;
+  opacity: 0;
+  /* top: -30px; */
+  cursor: pointer;
+  /* top:200px; */
+  /* bottom:10px; */
 }
 
 
